# simple-django-app

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  tox.ini
simple_django_app/: __init__.py  settings.py  urls.py  wsgi.py
simple_django_app/blog/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
simple_django_app/blog/migrations/: 0001_create_article_tag_models.py
simple_django_app/blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  tag_detail.html  tag_form.html  tag_list.html
simple_django_app/core/: __init__.py  apps.py
simple_django_app/core/management/: __init__.py
simple_django_app/core/management/commands/: __init__.py  runserver.py  waitforpostgres.py
simple_django_app/templates/base/: base.html  nav.html
